@@ -4,7 +4,6 @@ import java.security.SecureRandom;
 import java.util.Date;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.redis.core.StringRedisTemplate;
@@ -53,6 +52,14 @@ import io.jsonwebtoken.Claims;
 @RequiredArgsConstructor
 public class AuthService {
 
+    private static final String CHAR_LOWER = "abcdefghijklmnopqrstuvwxyz";
+    private static final String CHAR_UPPER = CHAR_LOWER.toUpperCase();
+    private static final String NUMBER = "0123456789";
+    private static final String SPECIAL_CHAR = "!@#$%^&*()_+-=";
+    private static final String PASSWORD_ALLOW_BASE = CHAR_LOWER + CHAR_UPPER + NUMBER + SPECIAL_CHAR;
+    private static final String REDIS_KEY_PREFIX_EMAIL_VERIFIED = "email:verified:";
+    private static final String REDIS_KEY_PREFIX_REFRESH = "refresh:";
+    private static final SecureRandom random = new SecureRandom();
     private final AuthProperties authProperties;
     private final EventAdminRepository eventAdminRepository;
     private final BoothAdminRepository boothAdminRepository;
@@ -64,38 +71,8 @@ public class AuthService {
     private final AuthConverter authConverter;
     private final JavaMailSender mailSender;
 
-    private static final String CHAR_LOWER = "abcdefghijklmnopqrstuvwxyz";
-    private static final String CHAR_UPPER = CHAR_LOWER.toUpperCase();
-    private static final String NUMBER = "0123456789";
-    private static final String SPECIAL_CHAR = "!@#$%^&*()_+-=";
-    private static final String PASSWORD_ALLOW_BASE = CHAR_LOWER + CHAR_UPPER + NUMBER + SPECIAL_CHAR;
-    private static final SecureRandom random = new SecureRandom();
-
     @Value("${jwt.refresh-token-expiration}")
     private long refreshTokenExpiration;
-
-
-    /**
-     * 이메일 인증 코드 생성
-     */
-    private String createVerificationCode() {
-        int code = random.nextInt(900000) + 100000;
-        return String.valueOf(code);
-    }
-
-    /**
-     * 12자리 랜덤 비밀번호 생성
-     */
-    private String createRandomPassword() {
-        StringBuilder sb = new StringBuilder(12);
-        for (int i = 0; i < 12; i++) {
-            int rndCharAt = random.nextInt(PASSWORD_ALLOW_BASE.length());
-            char rndChar = PASSWORD_ALLOW_BASE.charAt(rndCharAt);
-            sb.append(rndChar);
-        }
-        return sb.toString();
-    }
-
 
     /**
      * 이메일 인증 코드 발송
@@ -131,7 +108,6 @@ public class AuthService {
         }
     }
 
-
     /**
      * 이메일 인증 확인
      */
@@ -151,10 +127,9 @@ public class AuthService {
         redisTemplate.delete(key);
 
         redisTemplate.opsForValue()
-                .set("email:verified:" + req.email(), "true", authProperties.getEmailVerifyTtlMinutes(), TimeUnit.MINUTES);
+                .set(REDIS_KEY_PREFIX_EMAIL_VERIFIED + req.email(), "true", authProperties.getEmailVerifyTtlMinutes(), TimeUnit.MINUTES);
         log.info("[Auth] Email verified: {}", req.email());
     }
-
 
     /**
      * 행사 주최자 회원가입
@@ -166,7 +141,7 @@ public class AuthService {
         }
 
         String verified = redisTemplate.opsForValue()
-                .get("email:verified:" + req.email());
+                .get(REDIS_KEY_PREFIX_EMAIL_VERIFIED + req.email());
 
         if (verified == null || !verified.equals("true")) {
             throw new AuthException(ErrorCode.EMAIL_VERIFICATION_REQUIRED);
@@ -177,13 +152,12 @@ public class AuthService {
         EventAdmin eventAdmin = authConverter.toEventAdmin(req, encodedPassword);
         EventAdmin saved = eventAdminRepository.save(eventAdmin);
 
-        redisTemplate.delete("email:verified:" + req.email());
+        redisTemplate.delete(REDIS_KEY_PREFIX_EMAIL_VERIFIED + req.email());
 
         log.info("[Auth] New event admin signed up: {}", saved.getEmail());
 
         return authConverter.toSignupResDto(saved);
     }
-
 
     /**
      * 로그인 (통합)
@@ -210,7 +184,6 @@ public class AuthService {
 
             if (!boothAdmin.isActive()) {
                 boothAdmin.activateAccount();
-                boothAdminRepository.save(boothAdmin);
             }
 
             return generateLoginResponse(boothAdmin.getId(), Role.BOOTH_ADMIN, boothAdmin.getLoginId());
@@ -218,28 +191,6 @@ public class AuthService {
 
         throw new AuthException(ErrorCode.USER_NOT_FOUND);
     }
-
-    private void validatePassword(String rawPassword, String encodedPassword) {
-        if (!passwordEncoder.matches(rawPassword, encodedPassword)) {
-            throw new AuthException(ErrorCode.PASSWORD_MISMATCH);
-        }
-    }
-
-    private LoginResDto generateLoginResponse(Long id, Role role, String identifier) {
-        String accessToken = jwtProvider.createToken(id, role.name());
-        String refreshToken = jwtProvider.createRefreshToken(id);
-
-        redisTemplate.opsForValue().set(
-                "refresh:" + id,
-                refreshToken,
-                refreshTokenExpiration,
-                TimeUnit.MILLISECONDS
-        );
-
-        log.info("[Auth] {} logged in: {}", role.name(), identifier);
-        return authConverter.toLoginResDto(accessToken, refreshToken, role);
-    }
-
 
     /**
      * AccessToken 재발급
@@ -250,7 +201,7 @@ public class AuthService {
         Long userId = Long.parseLong(claims.getSubject());
 
         String saved = redisTemplate.opsForValue()
-                .get("refresh:" + userId);
+                .get(REDIS_KEY_PREFIX_REFRESH + userId);
 
         if (saved == null || !saved.equals(refreshToken)) {
             throw new AuthException(ErrorCode.INVALID_TOKEN);
@@ -262,7 +213,6 @@ public class AuthService {
 
         return authConverter.toLoginResDto(newAccessToken, refreshToken, role);
     }
-
 
     /**
      * 행사 주최자 내 정보 조회
@@ -276,7 +226,6 @@ public class AuthService {
         return authConverter.toMyInfoResDto(eventAdmin);
     }
 
-
     /**
      * 행사 주최자 회원정보 수정
      */
@@ -287,11 +236,9 @@ public class AuthService {
                 .orElseThrow(() -> new AuthException(ErrorCode.USER_NOT_FOUND));
 
         eventAdmin.updateInfo(req.name(), req.organization());
-        eventAdminRepository.save(eventAdmin);
 
         return authConverter.toMyInfoResDto(eventAdmin);
     }
-
 
     /**
      * 행사 주최자 비밀번호 변경
@@ -313,7 +260,6 @@ public class AuthService {
         log.info("[Auth] Password changed for event admin: {}", eventAdmin.getEmail());
     }
 
-
     /**
      * 행사 주최자 로그아웃
      */
@@ -333,10 +279,9 @@ public class AuthService {
                     TimeUnit.MILLISECONDS
             );
         }
-        redisTemplate.delete("refresh:" + userId);
+        redisTemplate.delete(REDIS_KEY_PREFIX_REFRESH + userId);
         log.info("[Auth] User logged out, userId: {}", userId);
     }
-
 
     /**
      * 행사 주최자 회원 탈퇴
@@ -346,11 +291,10 @@ public class AuthService {
 
         EventAdmin eventAdmin = eventAdminRepository.findById(userId)
                 .orElseThrow(() -> new AuthException(ErrorCode.USER_NOT_FOUND));
-        redisTemplate.delete("refresh:" + userId);
+        redisTemplate.delete(REDIS_KEY_PREFIX_REFRESH + userId);
         eventAdminRepository.delete(eventAdmin);
         log.info("[Auth] Event admin deleted: {}", eventAdmin.getEmail());
     }
-
 
     /**
      * 부스 관리자 일괄 생성
@@ -364,51 +308,8 @@ public class AuthService {
 
         return req.admins().stream()
                 .map(item -> createSingleBoothAdminAuto(req.eventId(), item))
-                .collect(Collectors.toList());
+                .toList();
     }
-
-    private BoothAdminCreateResDto createSingleBoothAdminAuto(final Long eventId, final BoothAdminBulkCreateReqDto.BoothAdminItem item) {
-        final Long boothId = item.boothId();
-        
-        if (!boothRepository.existsById(boothId)) {
-            throw new AuthException(ErrorCode.BOOTH_NOT_FOUND);
-        }
-
-        if (!boothAdminRepository.findAllByBoothIdIn(List.of(boothId)).isEmpty()) {
-            throw new AuthException(ErrorCode.ALREADY_ASSIGNED_BOOTH_ADMIN);
-        }
-
-        // 로그인 ID 생성 규칙 복구: evt{eventId}_bth{boothId}
-        String loginId = String.format("evt%d_bth%d", eventId, boothId);
-        
-        if (boothAdminRepository.findByLoginId(loginId).isPresent()) {
-            loginId = String.format("evt%d_bth%d_%d", eventId, boothId, random.nextInt(1000));
-        }
-
-        String rawPassword = createRandomPassword();
-        String encodedPassword = passwordEncoder.encode(rawPassword);
-
-        BoothAdmin boothAdmin = BoothAdmin.builder()
-                .boothId(boothId)
-                .loginId(loginId)
-                .password(encodedPassword)
-                .email(item.email())
-                .accountIssued(true) 
-                .build();
-
-        BoothAdmin saved = boothAdminRepository.save(boothAdmin);
-
-        log.info("[Auth] Auto created booth admin, loginId: {}", loginId);
-
-        return BoothAdminCreateResDto.builder()
-                .id(saved.getId())
-                .boothId(saved.getBoothId())
-                .loginId(saved.getLoginId())
-                .rawPassword(rawPassword)
-                .email(saved.getEmail())
-                .build();
-    }
-
 
     /**
      * 부스 관리자 로그인 정보 일괄 발송
@@ -421,7 +322,7 @@ public class AuthService {
         }
 
         List<BoothAdmin> admins = boothAdminRepository.findAllById(req.boothAdminIds());
-        
+
         if (admins.isEmpty()) {
             throw new AuthException(ErrorCode.USER_NOT_FOUND);
         }
@@ -429,11 +330,10 @@ public class AuthService {
         for (BoothAdmin admin : admins) {
             String rawPassword = createRandomPassword();
             String encodedPassword = passwordEncoder.encode(rawPassword);
-            
+
             admin.changePassword(encodedPassword);
             admin.markEmailAsSent();
-            boothAdminRepository.save(admin);
-            
+
             sendLoginInfoEmail(admin.getEmail(), admin.getLoginId(), rawPassword);
         }
     }
@@ -443,7 +343,7 @@ public class AuthService {
      */
     @Transactional(readOnly = true)
     public List<BoothAdminResDto> getBoothAdminsByEvent(final Long userId, final Long eventId) {
-        
+
         if (!eventAdminRepository.existsById(userId)) {
             throw new AuthException(ErrorCode.USER_NOT_FOUND);
         }
@@ -467,29 +367,8 @@ public class AuthService {
                         .isActive(admin.isActive())
                         .isProfileComplete(admin.getName() != null)
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
-
-    private void sendLoginInfoEmail(String email, String loginId, String password) {
-        try {
-            SimpleMailMessage message = new SimpleMailMessage();
-            message.setTo(email);
-            message.setSubject("[Freeline] 부스 관리자 계정 정보 안내");
-            message.setText(String.format(
-                    "안녕하세요, Freeline 부스 관리자 계정이 생성되었습니다.\n\n" +
-                    "로그인 ID: %s\n" +
-                    "초기 비밀번호: %s\n\n" +
-                    "최초 로그인 시 비밀번호를 반드시 변경해 주시기 바랍니다.",
-                    loginId, password
-            ));
-
-            mailSender.send(message);
-            log.info("[Auth] Login info sent to: {}", email);
-        } catch (Exception e) {
-            log.error("[Auth] Failed to send login info to: {}", email, e);
-        }
-    }
-
 
     /**
      * 부스 관리자 로그인
@@ -508,7 +387,6 @@ public class AuthService {
         // 최초 로그인 시 계정 활성화 (isActive = true)
         if (!boothAdmin.isActive()) {
             boothAdmin.activateAccount();
-            boothAdminRepository.save(boothAdmin);
         }
 
         String token = jwtProvider.createToken(
@@ -519,7 +397,6 @@ public class AuthService {
         log.info("[Auth] Booth admin logged in: {}", boothAdmin.getLoginId());
         return authConverter.toLoginResDto(token, null, Role.BOOTH_ADMIN);
     }
-
 
     /**
      * 방문자 입장
@@ -538,5 +415,104 @@ public class AuthService {
 
         log.info("[Auth] Visitor entered, visitorId: {}", visitor.getId());
         return authConverter.toLoginResDto(token, null, Role.VISITOR);
+    }
+
+    private String createVerificationCode() {
+        int code = random.nextInt(900000) + 100000;
+        return String.valueOf(code);
+    }
+
+    private String createRandomPassword() {
+        StringBuilder sb = new StringBuilder(12);
+        for (int i = 0; i < 12; i++) {
+            int rndCharAt = random.nextInt(PASSWORD_ALLOW_BASE.length());
+            char rndChar = PASSWORD_ALLOW_BASE.charAt(rndCharAt);
+            sb.append(rndChar);
+        }
+        return sb.toString();
+    }
+
+    private void validatePassword(final String rawPassword, final String encodedPassword) {
+        if (!passwordEncoder.matches(rawPassword, encodedPassword)) {
+            throw new AuthException(ErrorCode.PASSWORD_MISMATCH);
+        }
+    }
+
+    private LoginResDto generateLoginResponse(final Long id, final Role role, final String identifier) {
+        String accessToken = jwtProvider.createToken(id, role.name());
+        String refreshToken = jwtProvider.createRefreshToken(id);
+
+        redisTemplate.opsForValue().set(
+                REDIS_KEY_PREFIX_REFRESH + id,
+                refreshToken,
+                refreshTokenExpiration,
+                TimeUnit.MILLISECONDS
+        );
+
+        log.info("[Auth] {} logged in: {}", role.name(), identifier);
+        return authConverter.toLoginResDto(accessToken, refreshToken, role);
+    }
+
+    private BoothAdminCreateResDto createSingleBoothAdminAuto(final Long eventId, final BoothAdminBulkCreateReqDto.BoothAdminItem item) {
+        final Long boothId = item.boothId();
+
+        if (!boothRepository.existsById(boothId)) {
+            throw new AuthException(ErrorCode.BOOTH_NOT_FOUND);
+        }
+
+        if (!boothAdminRepository.findAllByBoothIdIn(List.of(boothId)).isEmpty()) {
+            throw new AuthException(ErrorCode.ALREADY_ASSIGNED_BOOTH_ADMIN);
+        }
+
+        String loginId = String.format("evt%d_bth%d", eventId, boothId);
+
+        if (boothAdminRepository.findByLoginId(loginId).isPresent()) {
+            loginId = String.format("evt%d_bth%d_%d", eventId, boothId, random.nextInt(1000));
+        }
+
+        String rawPassword = createRandomPassword();
+        String encodedPassword = passwordEncoder.encode(rawPassword);
+
+        BoothAdmin boothAdmin = BoothAdmin.builder()
+                .boothId(boothId)
+                .loginId(loginId)
+                .password(encodedPassword)
+                .email(item.email())
+                .accountIssued(true)
+                .build();
+
+        BoothAdmin saved = boothAdminRepository.save(boothAdmin);
+
+        log.info("[Auth] Auto created booth admin, loginId: {}", loginId);
+
+        return BoothAdminCreateResDto.builder()
+                .id(saved.getId())
+                .boothId(saved.getBoothId())
+                .loginId(saved.getLoginId())
+                .rawPassword(rawPassword)
+                .email(saved.getEmail())
+                .build();
+    }
+
+    private void sendLoginInfoEmail(final String email, final String loginId, final String password) {
+        try {
+            SimpleMailMessage message = new SimpleMailMessage();
+            message.setTo(email);
+            message.setSubject("[Freeline] 부스 관리자 계정 정보 안내");
+            message.setText(String.format(
+                    """
+                            안녕하세요, Freeline 부스 관리자 계정이 생성되었습니다.
+
+                            로그인 ID: %s
+                            초기 비밀번호: %s
+
+                            최초 로그인 시 비밀번호를 반드시 변경해 주시기 바랍니다.""",
+                    loginId, password
+            ));
+            mailSender.send(message);
+            log.info("[Auth] Login info sent to: {}", email);
+        } catch (Exception e) {
+            log.error("[Auth] Failed to send login info to: {}", email, e);
+        }
     }
 }
